        * [BUGFIX]: #3133 Fixed resolving tables with unusual (like cyrillic) characters in their names.
        * [BUGFIX]: #3096 Restored data editing by Return key hit, that got broken in 3.1.0 for MacOSX.
        * [BUGFIX]: #3122 Several tweaks to Android shell mode connection.
        * [BUGFIX]: #3093 Fixed memory leak in Android plugin.
        * [BUGFIX]: Fixed importing Windows end-line format CSV files (handling \r\n properly).
        * [BUGFIX]: Compilation fixes.

[3.1.0]
        * [ADDED]: SQLCipher plugin is now free, open source and distributed together with other standard plugins.
        * [ADDED]: #2963 Indexed expressions for CREATE INDEX statements (introduced in SQLite 3.9) are now supported and can be edited in Index Dialog.
        * [ADDED]: View window now supports explicit column names for the view (introduced in SQLite 3.9).
        * [ADDED]: #3056 #3063 Implemented index column ordering in index dialog.
        * [ADDED]: Added shortcut (Ctrl+/ by default) to toggle comment of current line or selected block of code (if any) in SQL editor.
        * [ADDED]: #3040 Added new entry in context menu of data grid to generate SELECT/INSERT/UPDATE/DELETE statement together with WHERE clause containing IN conditions for selected cells.
        * [ADDED]: Added new entry in context menu of database list to generate queries like in #3040 for selected table.
        * [ADDED]: #2975 Information message after successful table/view change.
        * [ADDED]: Introduced "loadByDefault" property for plugin descriptor files.
        * [ADDED]: Added options to have "Data" tab placed as a first tab for Table windows and for View windows. By default option is disabled, so by default nothing changes.
        * [ADDED]: Added option in configuration dialog to avoid reopening status panel for each message printed there.
        * [ADDED]: Added option in configuration dialog to prevent displaying tooltips over data view when user holds mouse over it.