@@ -15,6 +15,7 @@
         * [BUGFIX]: #3096 Restored data editing by Return key hit, that got broken in 3.1.0 for MacOSX.
         * [BUGFIX]: #3122 Several tweaks to Android shell mode connection.
         * [BUGFIX]: #3093 Fixed memory leak in Android plugin.
+        * [BUGFIX]: #3132 Fixed column resolving in a View that uses same alias for two different columns.
         * [BUGFIX]: Fixed importing Windows end-line format CSV files (handling \r\n properly).
         * [BUGFIX]: Compilation fixes.
 
